k8s-deployment/deployment.yaml
# -------------------------------
# Namespace
# -------------------------------
apiVersion: v1
kind: Namespace
metadata:
  name: "2401067"
---
# -------------------------------
# Deployment
# -------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdfhub-deployment
  namespace: "2401067"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pdfhub
  template:
    metadata:
      labels:
        app: pdfhub
    spec:
      imagePullSecrets:
        - name: nexus-secret

      containers:
        - name: pdfhub-container
          image: 127.0.0.1:30085/2401067/pdfhub:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          volumeMounts:
            - name: pdfhub-static
              mountPath: /app/staticfiles

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 40
            periodSeconds: 30

          resources:
            requests:
              cpu: "500m"
              memory: "2Gi"
            limits:
              cpu: "1"
              memory: "4Gi"

---
# -------------------------------
# Service
# -------------------------------
apiVersion: v1
kind: Service
metadata:
  name: pdfhub-service
  namespace: "2401067"
spec:
  selector:
    app: pdfhub
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
---
# -------------------------------
# Ingress
# -------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdfhub-ingress
  namespace: "2401067"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: 2401067.imcc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pdfhub-service
                port:
                  number: 8000

          - path: /static
            pathType: Prefix
            backend:
              service:
                name: pdfhub-service
                port:
                  number: 8000
